cabal-version: >=1.10
name:    hascookie
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:              2mol
maintainer:          2mol@users.noreply.github.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable hascookie
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Types
  -- other-extensions:
  build-depends:
      base >=4.12 && <4.14
    , aeson >= 1.4
    , cryptonite >= 0.25
    , http-conduit >=2.3
    , http-types >=0.12
    , text
    , Spock >=0.13
    , Spock-core >=0.13
    , reroute
    , mtl
  -- hs-source-dirs:
  default-language:    Haskell2010
