cabal-version: 2.2

name:    hascookie
version: 0.1.0.0
author:              2mol
maintainer:          2mol@users.noreply.github.com
build-type:          Simple

common common-exe
  ghc-options:
    -threaded -rtsopts
    -- -threaded -O2 -rtsopts -with-rtsopts=-N
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

executable hascookie
  hs-source-dirs:      src
  main-is:             Main.hs
  exposed-modules:     Main
  other-modules:
    Types
    DB
    Slack
  build-depends:
      base >=4.12 && <5
    , bytestring >= 0.10
    , Cabal >=3.0.0.0
    , containers
    , aeson >=1.4
    -- , cryptonite >=0.25
    , http-conduit >=2.3
    , http-types >=0.12
    , text
    , scotty
    , wai-extra
    , wai-middleware-static
    , reroute
    , mtl
    -- , neat-interpolation
    , sqlite-simple
  default-language:    Haskell2010
